# pathfinder

./: .gitignore  CMakeLists.txt  README.md  run_100k_eval.py  run_code_types.py  run_comprehensive_eval.py  run_d7_p015.py  run_final_eval.py  run_mixed_noise.py
bench/: paper_analysis.py  triton_directional.py  triton_ler_test.py  triton_restore_norm.py  triton_vs_orig.py
bench/results/: h200_lange_headtohead_low_p.json  h200_latency_results.json  h200_latency_torch26.json  h200_maxspeed.json  h200_noise_fixed_eval.json  pymatching_latency_m4.json  pymatching_latency_m4.txt
bench/results/h200_session2/: bench_lange_latency.py  downstream_queue.sh  ensemble_all.py  final_comparison.py  final_v2_eval.py  run_eval_v2.py  run_lange_v2.py  run_lange_v3.py  run_lange_v3_results.json  run_lange_vs_pathfinder.py  run_lange_vs_pathfinder_results.json  test_symmetry_invariance.py  train_distill_lange.py  train_eq_conservative.py  train_equivariant.py  train_equivariant_full.py  train_fixed_noise.py  train_modern.py  train_queue.sh  train_transformer.py  train_v2.py
bench/results/h200_session3/: ensemble_partial_capture.md  ensemble_pf_lange.py  ensemble_results.json  session3_summary.md  train_finetune_4param.py  train_muon_ablation.py
bench/results/pod_artifacts/: bench_h192_and_ensemble.py  bench_narrow.py  ensemble_only.py  ensemble_test.py  eval_narrow.py  final_benchmark.json  final_benchmark.py  h200_aoti.py  h200_aoti_v2.py  h200_bench.py  (+14 more)
figures/: make_figures.py
paper/: pathfinder.md
train/: evaluate.py  train.py  train_distill.py  train_h192_distill.py
(+86 files in other folders)
